fixed issues on mobile
